--- a/vignettes/tuningHyperparameters.Rmd
+++ b/vignettes/tuningHyperparameters.Rmd
@@ -53,38 +53,60 @@ Folds <- list(
 Now we need to define the scoring function. This function should, at a minimum, return a list with a ```Score``` element, which is the model evaluation metric we want to maximize. We can also retain other pieces of information created by the scoring function by including them as named elements of the returned list. In this case, we want to retain the optimal number of rounds determined by the ```xgb.cv```:
 
 ```{r eval = xgbAvail}
+
 scoringFunction <- function(max_depth, min_child_weight, subsample) {
 
-  dtrain <- xgb.DMatrix(agaricus.train$data,label = agaricus.train$label)
-  
-  Pars <- list( 
-      booster = "gbtree"
-    , eta = 0.01
-    , max_depth = max_depth
-    , min_child_weight = min_child_weight
-    , subsample = subsample
-    , objective = "binary:logistic"
-    , eval_metric = "auc"
+  # Coerce types explicitly
+  max_depth        <- as.integer(max_depth)[1]
+  min_child_weight <- as.numeric(min_child_weight)[1]
+  subsample        <- as.numeric(subsample)[1]
+
+  dtrain <- xgboost::xgb.DMatrix(
+    data  = agaricus.train$data,
+    label = agaricus.train$label
   )
 
-  xgbcv <- xgb.cv(
-      params = Pars
-    , data = dtrain
-    , nround = 100
-    , folds = Folds
-    , prediction = TRUE
-    , showsd = TRUE
-    , early_stopping_rounds = 5
-    , maximize = TRUE
-            , verbose = 0)
+  Pars <- list(
+    booster          = "gbtree",
+    eta              = 0.01,
+    max_depth        = max_depth,
+    min_child_weight = min_child_weight,
+    subsample        = subsample,
+    objective        = "binary:logistic",
+    eval_metric      = "auc"
+  )
 
-  return(
-    list( 
-        Score = max(xgbcv$evaluation_log$test_auc_mean)
-      , nrounds = xgbcv$best_iteration
-    )
+  xgbcv <- xgboost::xgb.cv(
+    params                = Pars,
+    data                  = dtrain,
+    nrounds               = 100,     # <- canonical argument name
+    folds                 = Folds,
+    prediction            = FALSE,   # set TRUE only if you actually need CV preds
+    showsd                = TRUE,
+    early_stopping_rounds = 5,
+    maximize              = TRUE,
+    verbose               = 0
+  )
+
+  # Compute Score robustly (scalar)
+  score_vec <- xgbcv$evaluation_log$test_auc_mean
+  Score     <- as.numeric(max(score_vec, na.rm = TRUE))[1]
+
+  # Derive a scalar "best nrounds" robustly
+  bi <- xgbcv$best_iteration
+  if (is.null(bi) || length(bi) != 1 || is.na(bi)) {
+    # fallback: the iteration where test AUC is maximized
+    bi <- which.max(score_vec)
+    if (length(bi) != 1 || is.na(bi)) bi <- 1L
+  }
+  BestNrounds <- as.integer(bi)[1]
+
+  list(
+    Score       = Score,
+    BestNrounds = BestNrounds
   )
 }
+
 ```
 
 
